mux-compiler/tests/snapshots/parser_integration__legacy_ast_test_nested_field.snap
---
source: mux-compiler/tests/parser_integration.rs
---
[
    Class {
        name: "Inner",
        type_params: [],
        traits: [],
        fields: [
            Field {
                name: "x",
                type_: TypeNode {
                    kind: Primitive(
                        Int,
                    ),
                    span: Span,
                },
                is_generic_param: false,
                is_const: false,
                default_value: None,
                where_clause: None,
            },
        ],
        methods: [],
        where_clause: None,
        span: Span,
    },
    Class {
        name: "Outer",
        type_params: [],
        traits: [],
        fields: [
            Field {
                name: "inner",
                type_: TypeNode {
                    kind: Named(
                        "Inner",
                        [],
                    ),
                    span: Span,
                },
                is_generic_param: false,
                is_const: false,
                default_value: None,
                where_clause: None,
            },
        ],
        methods: [],
        where_clause: None,
        span: Span,
    },
    Function(
        FunctionNode {
            name: "main",
            type_params: [],
            params: [],
            return_type: TypeNode {
                kind: Primitive(
                    Void,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: AutoDecl(
                        "i",
                        TypeNode {
                            kind: Auto,
                            span: Span,
                        },
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: FieldAccess {
                                        expr: ExpressionNode {
                                            kind: Identifier(
                                                "Inner",
                                            ),
                                            span: Span,
                                        },
                                        field: "new",
                                    },
                                    span: Span,
                                },
                                args: [],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Binary {
                                left: ExpressionNode {
                                    kind: FieldAccess {
                                        expr: ExpressionNode {
                                            kind: Identifier(
                                                "i",
                                            ),
                                            span: Span,
                                        },
                                        field: "x",
                                    },
                                    span: Span,
                                },
                                op: Assign,
                                op_span: Span,
                                right: ExpressionNode {
                                    kind: Literal(
                                        Integer(
                                            42,
                                        ),
                                    ),
                                    span: Span,
                                },
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: AutoDecl(
                        "o",
                        TypeNode {
                            kind: Auto,
                            span: Span,
                        },
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: FieldAccess {
                                        expr: ExpressionNode {
                                            kind: Identifier(
                                                "Outer",
                                            ),
                                            span: Span,
                                        },
                                        field: "new",
                                    },
                                    span: Span,
                                },
                                args: [],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Binary {
                                left: ExpressionNode {
                                    kind: FieldAccess {
                                        expr: ExpressionNode {
                                            kind: Identifier(
                                                "o",
                                            ),
                                            span: Span,
                                        },
                                        field: "inner",
                                    },
                                    span: Span,
                                },
                                op: Assign,
                                op_span: Span,
                                right: ExpressionNode {
                                    kind: Identifier(
                                        "i",
                                    ),
                                    span: Span,
                                },
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "print",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: Call {
                                            func: ExpressionNode {
                                                kind: FieldAccess {
                                                    expr: ExpressionNode {
                                                        kind: FieldAccess {
                                                            expr: ExpressionNode {
                                                                kind: FieldAccess {
                                                                    expr: ExpressionNode {
                                                                        kind: Identifier(
                                                                            "o",
                                                                        ),
                                                                        span: Span,
                                                                    },
                                                                    field: "inner",
                                                                },
                                                                span: Span,
                                                            },
                                                            field: "x",
                                                        },
                                                        span: Span,
                                                    },
                                                    field: "to_string",
                                                },
                                                span: Span,
                                            },
                                            args: [],
                                        },
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Binary {
                                left: ExpressionNode {
                                    kind: FieldAccess {
                                        expr: ExpressionNode {
                                            kind: FieldAccess {
                                                expr: ExpressionNode {
                                                    kind: Identifier(
                                                        "o",
                                                    ),
                                                    span: Span,
                                                },
                                                field: "inner",
                                            },
                                            span: Span,
                                        },
                                        field: "x",
                                    },
                                    span: Span,
                                },
                                op: Assign,
                                op_span: Span,
                                right: ExpressionNode {
                                    kind: Literal(
                                        Integer(
                                            100,
                                        ),
                                    ),
                                    span: Span,
                                },
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "print",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: Call {
                                            func: ExpressionNode {
                                                kind: FieldAccess {
                                                    expr: ExpressionNode {
                                                        kind: FieldAccess {
                                                            expr: ExpressionNode {
                                                                kind: FieldAccess {
                                                                    expr: ExpressionNode {
                                                                        kind: Identifier(
                                                                            "o",
                                                                        ),
                                                                        span: Span,
                                                                    },
                                                                    field: "inner",
                                                                },
                                                                span: Span,
                                                            },
                                                            field: "x",
                                                        },
                                                        span: Span,
                                                    },
                                                    field: "to_string",
                                                },
                                                span: Span,
                                            },
                                            args: [],
                                        },
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: AutoDecl(
                        "o2",
                        TypeNode {
                            kind: Auto,
                            span: Span,
                        },
                        ExpressionNode {
                            kind: Identifier(
                                "o",
                            ),
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Binary {
                                left: ExpressionNode {
                                    kind: FieldAccess {
                                        expr: ExpressionNode {
                                            kind: FieldAccess {
                                                expr: ExpressionNode {
                                                    kind: Identifier(
                                                        "o2",
                                                    ),
                                                    span: Span,
                                                },
                                                field: "inner",
                                            },
                                            span: Span,
                                        },
                                        field: "x",
                                    },
                                    span: Span,
                                },
                                op: Assign,
                                op_span: Span,
                                right: ExpressionNode {
                                    kind: Literal(
                                        Integer(
                                            200,
                                        ),
                                    ),
                                    span: Span,
                                },
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "print",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: Call {
                                            func: ExpressionNode {
                                                kind: FieldAccess {
                                                    expr: ExpressionNode {
                                                        kind: FieldAccess {
                                                            expr: ExpressionNode {
                                                                kind: FieldAccess {
                                                                    expr: ExpressionNode {
                                                                        kind: Identifier(
                                                                            "o2",
                                                                        ),
                                                                        span: Span,
                                                                    },
                                                                    field: "inner",
                                                                },
                                                                span: Span,
                                                            },
                                                            field: "x",
                                                        },
                                                        span: Span,
                                                    },
                                                    field: "to_string",
                                                },
                                                span: Span,
                                            },
                                            args: [],
                                        },
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Return(
                        None,
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
]
